--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id("maven-publish")
 }
 
 group = 'dev.artingl'
@@ -15,6 +16,13 @@ repositories {
     maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
     maven { url "https://repo.spongepowered.org/repository/maven-public/" }
     maven { url "https://jitpack.io" }
+    maven {
+        url = uri("https://maven.pkg.github.com/fnuecke/sedna")
+        credentials {
+            username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_USERNAME")
+            password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
+        }
+    }
 }
 
 dependencies {
@@ -36,6 +44,7 @@ dependencies {
     runtimeOnly "org.lwjgl:lwjgl-stb::$natives"
     runtimeOnly "org.lwjgl:lwjgl-tinyfd::$natives"
 
+    implementation 'li.cil.sedna:sedna:2.0.8'
     implementation "io.github.spair:imgui-java-binding:$imguiVersion"
     implementation "io.github.spair:imgui-java-lwjgl3:$imguiVersion"
     implementation "io.github.spair:imgui-java-$natives:$imguiVersion"
